--- a/Página-Inicial.html
+++ b/Página-Inicial.html
@@ -25,15 +25,15 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="pt">
-    <section class="u-clearfix u-custom-color-1 u-valign-middle-xs u-section-1" id="sec-148b">
-      <img class="u-expanded-width u-image u-image-contain u-image-default u-image-1" src="images/Elemento1.png" alt="" data-image-width="800" data-image-height="214">
-      <img class="u-image u-image-contain u-image-default u-image-2" src="images/LogoVertical.png" alt="" data-image-width="300" data-image-height="200">
+    <section class="u-clearfix u-custom-color-1 u-section-1" id="sec-148b">
+      <img class="u-expanded-width u-hidden-md u-hidden-sm u-hidden-xs u-image u-image-contain u-image-default u-image-1" src="images/Elemento1.png" alt="" data-image-width="800" data-image-height="214">
+      <img class="u-align-center-xs u-image u-image-contain u-image-default u-image-2" src="images/LogoVertical.png" alt="" data-image-width="300" data-image-height="200">
       <p class="u-text u-text-body-alt-color u-text-1"> Tenha um Cão Comportado co​​m estes "<span class="u-text-custom-color-2">Simples Passos</span>"
       </p>
       <p class="u-text u-text-body-alt-color u-text-2"> Transforme o Comportamento do Seu Cão com Simples Passos e <span style="text-decoration: underline !important;">Poucos Minutos por Dia</span>!
       </p>
       <a href="https://nicepage.com/landing-page" class="infinite u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1" data-animation-name="pulse" data-animation-duration="1750" data-animation-direction="" data-animation-delay="2750">CONTINUAR LENDO...</a>
-      <img class="u-hidden-xs u-image u-image-contain u-image-default u-image-3" src="images/Elemento2.png" alt="" data-image-width="520" data-image-height="400">
+      <img class="u-hidden-md u-hidden-sm u-hidden-xs u-image u-image-contain u-image-default u-image-3" src="images/Elemento2.png" alt="" data-image-width="520" data-image-height="400">
     </section>
     <section class="u-clearfix u-section-2" id="sec-1f33">
       <div class="u-clearfix u-sheet u-sheet-1">
