--- a/Página-Inicial.html
+++ b/Página-Inicial.html
@@ -37,10 +37,11 @@
     </section>
     <section class="u-clearfix u-section-2" id="sec-1f33">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center u-text u-text-custom-color-1 u-text-1">O Segredo</p>
+        <p class="u-align-center u-text u-text-custom-color-1 u-text-1">O Segr<span style="font-size: 2.25rem;"></span>edo
+        </p>
         <div class="u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-1"></div>
-        <p class="u-text u-text-custom-color-1 u-text-2"> Um "segredo" que ativa a inteligência do cão e faz ele te ver como líder</p>
-        <p class="u-text u-text-grey-90 u-text-3"> Desvende o "segredo" presente na mente dos cães e seja o líder que o seu cão respeita e obedece!</p>
+        <p class="u-text u-text-custom-color-1 u-text-2"> Um "segredo" que ativa a inteligê​​ncia do cão e faz ele te ver como líder</p>
+        <p class="u-text u-text-grey-90 u-text-3"> Desvende o "segredo" presente na ​​mente dos cães e seja o líder que o seu cão respeita e obedece!</p>
         <a href="https://nicepage.com/landing-page" class="infinite u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1" data-animation-name="pulse" data-animation-duration="1750" data-animation-direction="" data-animation-delay="2750">EU QUERO!</a>
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/Elemento3.png" alt="" data-image-width="348" data-image-height="400">
       </div>
