--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
     <section class="u-clearfix u-custom-color-1 u-section-1" id="sec-148b">
       <img class="u-expanded-width u-hidden-md u-hidden-sm u-hidden-xs u-image u-image-contain u-image-default u-image-1" src="images/Elemento1.png" alt="" data-image-width="800" data-image-height="214">
       <img class="u-align-center-xs u-image u-image-contain u-image-default u-image-2" src="images/LogoVertical.png" alt="" data-image-width="300" data-image-height="200">
-      <p class="u-align-left-xs u-text u-text-body-alt-color u-text-1"> Tenha um Cão Comportado co​​m estes "<span class="u-text-custom-color-2">Simples Passos</span>"
+      <p class="u-text u-text-body-alt-color u-text-1"> Tenha um Cão Comportado co​​m estes "<span class="u-text-custom-color-2">Simples Passos</span>"
       </p>
-      <p class="u-align-left-xs u-text u-text-body-alt-color u-text-2"> Transforme o Comporta​​mento do Seu Cão com Simples Passos e <span style="text-decoration: underline !important;">Poucos Minutos por Dia</span>!
+      <p class="u-text u-text-body-alt-color u-text-2"> Transforme o Comporta​​mento do Seu Cão com Simples Passos e <span style="text-decoration: underline !important;">Poucos Minutos por Dia</span>!
       </p>
       <a href="https://nicepage.com/landing-page" class="infinite u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1">CONTINUAR LENDO...</a>
       <img class="u-hidden-md u-hidden-sm u-hidden-xs u-image u-image-contain u-image-default u-image-3" src="images/Elemento2.png" alt="" data-image-width="520" data-image-height="400">
     </section>
-    <section class="u-clearfix u-section-2" id="sec-1f33">
+    <section class="u-clearfix u-white u-section-2" id="sec-1f33">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-custom-color-1 u-text-1">O Segr<span style="font-size: 2.25rem;"></span>edo
         </p>
         <div class="u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-1"></div>
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/Elemento3.png" alt="" data-image-width="348" data-image-height="400">
         <p class="u-text u-text-custom-color-1 u-text-2"> Um "segredo" que ativa a inteligê​​ncia do cão e faz ele te ver como líder</p>
         <p class="u-text u-text-grey-90 u-text-3"> Desvende o "segredo" presente na ​​mente dos cães e seja o líder que o seu cão respeita e obedece!</p>
         <a href="https://nicepage.com/landing-page" class="infinite u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1" data-animation-name="pulse" data-animation-duration="1750" data-animation-direction="" data-animation-delay="2750">EU QUERO!</a>
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/Elemento3.png" alt="" data-image-width="348" data-image-height="400">
       </div>
     </section>
     <section class="u-clearfix u-section-3" id="sec-254a">
@@ -53,7 +53,7 @@
         <p class="u-align-center u-text u-text-custom-color-1 u-text-1">Vamos aprender:</p>
         <div class="u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-border-4 u-border-custom-color-1 u-container-style u-group u-radius-10 u-shape-round u-group-1">
-          <div class="u-container-layout u-valign-middle u-container-layout-1">
+          <div class="u-container-layout u-valign-middle-xl u-container-layout-1">
             <img class="u-image u-image-contain u-image-default u-image-1" src="images/Elemento4.png" alt="" data-image-width="348" data-image-height="331">
             <p class="u-align-center u-text u-text-custom-color-1 u-text-2">Treinamento</p>
             <p class="u-align-center u-text u-text-grey-90 u-text-3"> Como montar e iniciar um plano de treino para ensinar o seu cão</p>
@@ -82,29 +82,33 @@
         <p class="u-align-center u-text u-text-body-alt-color u-text-1">Perfeito para você que:</p>
         <div class="u-align-center u-border-4 u-border-white u-line u-line-horizontal u-line-1"></div>
         <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-1">
-          <div class="u-container-layout u-container-layout-1">
+          <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
             <img class="u-image u-image-contain u-image-default u-image-1" src="images/Elemento5.png" alt="" data-image-width="348" data-image-height="200">
             <p class="u-align-center u-text u-text-grey-90 u-text-2"> Sente que não tem o controle sobre o seu cão</p>
           </div>
         </div>
         <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-2">
-          <div class="u-container-layout u-container-layout-2">
+          <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
             <img class="u-image u-image-contain u-image-default u-image-2" src="images/Elemento5.png" alt="" data-image-width="348" data-image-height="200">
             <p class="u-align-center u-text u-text-grey-90 u-text-3"> Sente que não tem o controle sobre o seu cão</p>
           </div>
         </div>
         <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-3">
-          <div class="u-container-layout u-container-layout-3">
+          <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
             <img class="u-image u-image-contain u-image-default u-image-3" src="images/Elemento5.png" alt="" data-image-width="348" data-image-height="200">
             <p class="u-align-center u-text u-text-grey-90 u-text-4"> Sente que não tem o controle sobre o seu cão</p>
           </div>
         </div>
+        <a href="https://nicepage.com/landing-page" class="infinite u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1" data-animation-name="pulse" data-animation-duration="1750" data-animation-direction="" data-animation-delay="2750">EU QUERO!</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Texto de Amostra. Clique para selecionar o Elemento de Texto.</p>
+    <footer class="u-clearfix u-custom-color-1 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/LogoVertical.png" alt="" data-image-width="300" data-image-height="200">
+        <p class="u-align-center u-text u-text-grey-90 u-text-1">Todos os conteúdos e dados de acesso fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia será levada à medidas legais.<br>
+          <br>Para contato: contato@metodocaointeligente.com
+        </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
