--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
     <section class="u-clearfix u-custom-color-3 u-section-3" id="sec-254a">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-custom-color-1 u-text-1">Vamos aprender:</p>
         <div class="u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-border-4 u-border-custom-color-1 u-container-style u-group u-radius-10 u-shape-round u-group-1">
