--- a/index.html
+++ b/index.html
@@ -37,23 +37,22 @@
     <section class="u-clearfix u-image u-section-2" id="sec-148b" data-image-width="800" data-image-height="350">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/Logo-caoportado.webp" alt="" data-image-width="300" data-image-height="200">
-        <img class="u-image u-image-contain u-image-default u-image-2" src="images/Elemento2.webp" alt="" data-image-width="520" data-image-height="400">
+        <img class="u-hidden-xs u-image u-image-contain u-image-default u-image-2" src="images/Elemento2.webp" alt="" data-image-width="520" data-image-height="400">
         <p class="u-text u-text-body-alt-color u-text-1"> Tenha um Cão Comportado co​​m estes "<span class="u-text-custom-color-2">Simples Passos</span>"
         </p>
         <p class="u-text u-text-body-alt-color u-text-2"> Transforme o Comporta​​mento do Seu Cão com Simples Passos e <span style="text-decoration: underline !important;">Poucos Minutos por Dia</span>!
         </p>
-        <a href="https://nicepage.com/landing-page" class="infinite u-align-center-xs u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1">CONTINUAR LENDO...</a>
+        <a href="https://nicepage.com/landing-page" class="infinite u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1">CONTINUAR LENDO...</a>
       </div>
     </section>
     <section class="u-clearfix u-white u-section-3" id="sec-1f33">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center u-text u-text-custom-color-1 u-text-1">O Segr<span style="font-size: 2.25rem;"></span>edo
-        </p>
+        <p class="u-align-center u-text u-text-custom-color-1 u-text-1">O Segr​​edo</p>
         <div class="u-border-4 u-border-custom-color-1 u-line u-line-horizontal u-line-1"></div>
         <p class="u-text u-text-custom-color-1 u-text-2"> Existe um "segredo" único que ativa a inteligência do cão e transforma o comportamento dele em poucos dias</p>
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/Elemento3.webp" alt="" data-image-width="348" data-image-height="400">
         <p class="u-text u-text-grey-90 u-text-3"> Esse "segredo" está presente na mente de todos os cães, independente da raça ou idade.<br>
-          <br>Com esse "segredo" em poucos dias você terá um comportado que te escuta, respeita e obedece.<br>
+          <br>Com esse "segredo" em poucos dias você terá um comportado que te <span style="text-decoration: underline !important;">escuta</span>, <span style="text-decoration: underline !important;">respeita</span> e <span style="text-decoration: underline !important;">obedece</span>.<br>
         </p>
         <a href="https://nicepage.com/landing-page" class="infinite u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-hover-custom-color-2 u-radius-5 u-btn-1" data-animation-name="pulse" data-animation-duration="1750" data-animation-direction="" data-animation-delay="2750">EU QUERO!</a>
       </div>
@@ -121,5 +120,16 @@
           <br>Para contato: contato@metodocaointeligente.com
         </p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
