--- a/Método-Cãoportado.html
+++ b/Método-Cãoportado.html
@@ -2,11 +2,12 @@
 <html style="font-size: 16px;" lang="pt"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="​Escreva aqui uma headlinepersuasiva">
-    <meta name="description" content="">
-    <title>vslcaoportado</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="Clique e assista o vídeo sobre o método cãoportado.">
+    <meta name="robots" content="noindex">
+    <title>MAC ADESTRA - Método Cãoportado</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="vslcaoportado.css" media="screen">
+<link rel="stylesheet" href="Método-Cãoportado.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
@@ -19,14 +20,14 @@
 		"name": "Mac Adestra"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="vslcaoportado">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="MAC ADESTRA - Método Cãoportado">
+    <meta property="og:description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="pt">
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="np://user.desktop.nicepage.com/Site_806526546/images/Logo-CaoPortado1.webp?rand=7a7e" alt="" data-image-width="300" data-image-height="200">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
         <p class="u-align-center u-text u-text-custom-color-5 u-text-1"> O Incrível "Segredo" Presente na Mente dos Cães que <span style="text-decoration: underline !important;">Transforma Cães Desobedientes</span> em <span style="text-decoration: underline !important;">Cã</span>
           <span style="text-decoration: underline !important;">
             <span style="text-decoration: underline !important;">es </span>Super Comportados
@@ -50,10 +51,21 @@
     </section>
     
     
-    <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="np://user.desktop.nicepage.com/Site_806526546/images/Logo-caoportado.webp?rand=67b2" alt="" data-image-width="300" data-image-height="200">
+    <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-grey-90 u-text-1">Todos os conteúdos e dados de acesso fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia será levada à medidas legais.<br>
           <br>Para contato: contato@metodocaointeligente.com
         </p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
+  
 </body></html>
