--- a/Método-Cãoportado.html
+++ b/Método-Cãoportado.html
@@ -10,8 +10,8 @@
 <link rel="stylesheet" href="Método-Cãoportado.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     
     
     <script type="application/ld+json">{
@@ -28,7 +28,7 @@
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
-        <p class="u-align-center u-text u-text-custom-color-5 u-text-1"> O Incrível "Segredo" Presente na Mente dos Cães que <span style="text-decoration: underline !important;">Transforma Cães Desobedientes</span> em <span style="text-decoration: underline !important;">Cã</span>
+        <p class="u-align-center u-text u-text-custom-color-5 u-text-1"> O Incrível "Segredo" Presente na Mente dos Cãe​s que <span style="text-decoration: underline !important;">Transforma Cães Desobedientes</span> em <span style="text-decoration: underline !important;">Cã</span>
           <span style="text-decoration: underline !important;">
             <span style="text-decoration: underline !important;">es </span>Super Comportados
           </span> em Poucos Minutos por Dia!
@@ -36,7 +36,7 @@
         <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente
         </p>
         <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-custom-html-1">
-          <div id="vidalytics_embed_F8UFH5B6xRS1UE38" style="width: 100%; position:relative; padding-top: 56.25%;"></div>
+          <div id="vidalytics_embed_F8UFH5B6xRS1UE38" style="width: 100%;position:relative; padding-top: 56.25%;"></div>
           <script type="text/javascript"> (function (v, i, d, a, l, y, t, c, s) {
     y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
     if (!vsl){vsl=function(u,cb){
