--- a/caoportado.html
+++ b/caoportado.html
@@ -5,13 +5,14 @@
     <meta name="keywords" content="">
     <meta name="description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta name="robots" content="noindex">
-    <title>MAC ADESTRA - Método Cãoportado</title>
+    <title>caoportado</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Método-Cãoportado.css" media="screen">
+<link rel="stylesheet" href="caoportado.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     
     
     <script type="application/ld+json">{
@@ -20,23 +21,20 @@
 		"name": "Mac Adestra"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="MAC ADESTRA - Método Cãoportado">
+    <meta property="og:title" content="caoportado">
     <meta property="og:description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Método-Cãoportado.html" data-home-page-title="Método Cãoportado" class="u-body u-xl-mode" data-lang="pt">
+  <body data-home-page="caoportado.html" data-home-page-title="caoportado" class="u-body u-xl-mode" data-lang="pt">
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
-        <p class="u-align-center u-text u-text-custom-color-5 u-text-1"> O Incrível "Segredo" Presente na Mente dos Cãe​s que <span style="text-decoration: underline !important;">Transforma Cães Desobedientes</span> em <span style="text-decoration: underline !important;">Cã</span>
-          <span style="text-decoration: underline !important;">
-            <span style="text-decoration: underline !important;">es </span>Super Comportados
-          </span> em Poucos Minutos por Dia!
+        <p class="u-align-center u-text u-text-custom-color-5 u-text-1">O Incrível "Segredo" Presente na Mente dos Cães que Transformam <span style="text-decoration: underline !important;">Cães Desobedientes em Cães Super Comportados</span> em Poucos Minutos por Dia!
         </p>
-        <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente
+        <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente...
         </p>
-        <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-custom-html-1">
-          <div id="vidalytics_embed_F8UFH5B6xRS1UE38" style="width: 100%;position:relative; padding-top: 56.25%;"></div>
+        <div class="u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-custom-html-1">
+          <div id="vidalytics_embed_F8UFH5B6xRS1UE38" style="width: 100%; position:relative; border: 3px solid #000000; padding-top: 56.25%;"></div>
           <script type="text/javascript"> (function (v, i, d, a, l, y, t, c, s) {
     y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
     if (!vsl){vsl=function(u,cb){
