--- a/caoportado.html
+++ b/caoportado.html
@@ -10,9 +10,8 @@
 <link rel="stylesheet" href="caoportado.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     
     
     <script type="application/ld+json">{
@@ -25,7 +24,7 @@
     <meta property="og:description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="caoportado.html" data-home-page-title="caoportado" class="u-body u-xl-mode" data-lang="pt">
+  <body class="u-body u-xl-mode" data-lang="pt">
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
