--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </p>
         <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente...
         </p>
-        <div class="u-clearfix u-custom-html u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-custom-html-1">
-          <div id="vidalytics_embed_F8UFH5B6xRS1UE38" style="width: 100%; position:relative; border: 3px solid #000000; padding-top: 56.25%;"></div>
+        <div class="u-clearfix u-custom-html u-expanded-width-xs u-custom-html-1">
+          <div id="vidalytics_embed_Flzn4yX6PhW3YJ7z" style="width: 100%; position:relative; padding-top: 56.25%;"></div>
           <script type="text/javascript"> (function (v, i, d, a, l, y, t, c, s) {
     y='_'+d.toLowerCase();c=d+'L';if(!v[d]){v[d]={};}if(!v[c]){v[c]={};}if(!v[y]){v[y]={};}var vl='Loader',vli=v[y][vl],vsl=v[c][vl + 'Script'],vlf=v[c][vl + 'Loaded'],ve='Embed';
     if (!vsl){vsl=function(u,cb){
@@ -42,7 +42,7 @@
         i.getElementsByTagName("head")[0].appendChild(s);
     };}
     vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
-})(window, document, 'Vidalytics', 'vidalytics_embed_F8UFH5B6xRS1UE38', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/F8UFH5B6xRS1UE38/'); </script>
+})(window, document, 'Vidalytics', 'vidalytics_embed_Flzn4yX6PhW3YJ7z', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/Flzn4yX6PhW3YJ7z/'); </script>
         </div>
       </div>
     </section>
