--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="pt">
+  <body data-home-page="caoportado.html" data-home-page-title="caoportado" class="u-body u-xl-mode" data-lang="pt">
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
@@ -44,15 +44,32 @@
     vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
 })(window, document, 'Vidalytics', 'vidalytics_embed_Flzn4yX6PhW3YJ7z', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/Flzn4yX6PhW3YJ7z/'); </script>
         </div>
-        <a href="https://metodocaointeligente.com" id= "pitchzera" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
+        <a href="https://nicepage.me" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
       </div>
     </section>
     
     
     <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
-        <p class="u-align-center u-text u-text-grey-90 u-text-1">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
-          <br>Para contato: contato@metodocaointeligente.com
+        <p class="u-align-center u-text u-text-grey-90 u-text-1">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-5 u-btn-1" href="privacidade.html">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
+            <br>
+            <span style="text-decoration: underline !important;">Política de privacidade<br>
+            </span>
+            <br>Para contato: contato@metodocaointeligente.com
+          </a>
         </p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
+  
 </body></html>
