--- a/caoportado.html
+++ b/caoportado.html
@@ -44,7 +44,7 @@
     vsl(l+'loader.min.js',function(){if(!vli){var vlc=v[c][vl];vli=new vlc();}vli.loadScript(l+'player.min.js',function(){var vec=v[d][ve];t=new vec();t.run(a);});});
 })(window, document, 'Vidalytics', 'vidalytics_embed_Flzn4yX6PhW3YJ7z', 'https://fast.vidalytics.com/embeds/rNCQ4Y2U/Flzn4yX6PhW3YJ7z/'); </script>
         </div>
-        <a href="https://metodocaointeligente.com" id= "pitchzera" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
+        <a href="https://metodocaointeligente.com" class="u-active-custom-color-1 u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-custom-font u-hover-custom-color-1 u-radius-9 u-text-active-custom-color-3 u-text-custom-color-3 u-text-hover-custom-color-3 u-btn-1">eu quero!</a>
       </div>
     </section>
     
