--- a/caoportado/index.html
+++ b/caoportado/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Clique e assista o vídeo sobre o método cãoportado.">
     <meta name="robots" content="noindex">
     <title>caoportado</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="../nicepage.css" media="screen">
 <link rel="stylesheet" href="caoportado.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
@@ -27,7 +27,7 @@
   <body class="u-body u-xl-mode" data-lang="pt">
     <section class="u-clearfix u-section-1" id="sec-9cf3">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="../images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
         <p class="u-align-center u-text u-text-custom-color-5 u-text-1">O Incrível "Segredo" Presente na Mente dos Cães que Transformam <span style="text-decoration: underline !important;">Cães Desobedientes em Cães Super Comportados</span> em Poucos Minutos por Dia!
         </p>
         <p class="u-align-center u-text u-text-custom-color-5 u-text-2"> Descubra a verdadeira razão pela qual o seu cão <span class="u-text-custom-color-1">ignora seus chamados</span> e <span class="u-text-custom-color-1">não obedece</span> aos seus comandos diariamente...
@@ -50,7 +50,7 @@
     
     
     <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="../images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
         <p class="u-align-center u-text u-text-grey-90 u-text-1">
           <a class="u-active-none u-border-none u-button-link u-button-style u-hover-none u-none u-text-custom-color-5" href="privacidade.html">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
             <br>
