--- a/caoportado/index.html
+++ b/caoportado/index.html
@@ -15,7 +15,7 @@
     
     
     <script type="application/ld+json">{
-		"@context": "http://schema.org",s
+		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Mac Adestra"
 }</script>
