--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <footer class="u-clearfix u-custom-color-3 u-footer" id="sec-349d"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200">
         <p class="u-align-center u-text u-text-grey-90 u-text-1">
-          <a class="u-active-none u-border-none u-button-link u-button-style u-hover-none u-none u-text-custom-color-5" href="privacidade.html">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
+          <a class="u-active-none u-border-none u-button-link u-button-style u-hover-none u-none u-text-custom-color-5" href="/privacidade">Todos os conteúdos fornecidos nesta página são de propriedade da empresa ​LML NEGOCIOS DIGITAIS - 35.931.353/0001-90.<br>Qualquer tipo de pirataria ou cópia serão considerados pirataria e levados e medidas jurídicas e legais.<br>
             <br>
             <span style="text-decoration: underline !important;">Política de privacidade<br>
             </span>
