--- a/privacidade/index.html
+++ b/privacidade/index.html
@@ -49,7 +49,7 @@
           <span style="text-decoration: underline !important;">Importante</span>: NENHUMA mídia, seja vídeo ou imagem apresentadas nas páginas do site&nbsp;https://metodocaointeligente.com estão permitidas para uso próprio ou comercial. cópias e falsificações serão identificadas e levadas à medidas jurídicas e legais.<br>
           <br>Esta política é efetiva a partir de 22 de Fevereiro 2023 17:00
         </p>
-        <img class="u-align-center u-image u-image-contain u-image-default u-image-1" src="../images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200" data-href="caoportado.html" title="caoportado">
+        <img class="u-align-center u-image u-image-contain u-image-default u-image-1" src="../images/logo_caoportado1.png" alt="" data-image-width="300" data-image-height="200" data href="/caoportado" title="caoportado">
       </div>
     </section>
   
