--- a/_pgbackup/pagina1/index_1683011892.html
+++ b/_pgbackup/pagina1/index_1683011892.html
@@ -17,17 +17,14 @@
         <h2 style="text-align: center; font-family: 'Rubik', sans-serif; font-weight: 400; color: #00000;"><i>Como <b>donos de cães</b> estão aprendendo a se comunicar de <b>forma efetiva</b> e <b>transformando comportamentos</b> problemáticos em minutos por dia.</i></h2>
         <section id="section-video">
             <div style="position:relative;padding-top:56.25%;">
-                <iframe id="panda-3a72950d-1f01-4952-911e-f41dacbcf5da" src="https://player-vz-7d42aded-c49.tv.pandavideo.com.br/embed/?v=3a72950d-1f01-4952-911e-f41dacbcf5da" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen="true" width="100%" height="100%" fetchpriority="high">
-                    <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-3a72950d-1f01-4952-911e-f41dacbcf5da',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
-                    <div id="ebbdd3ee-1e5f-4373-b046-bf5c5419bd00"></div>
-                </iframe>
+                <iframe id="panda-3a72950d-1f01-4952-911e-f41dacbcf5da" src="https://player-vz-7d42aded-c49.tv.pandavideo.com.br/embed/?v=3a72950d-1f01-4952-911e-f41dacbcf5da" style="border:none;position:absolute;top:0;left:0;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen="true" width="100%" height="100%" fetchpriority="high"></iframe>
             </div>
         </section>
         <section>
             <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-3a72950d-1f01-4952-911e-f41dacbcf5da',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
             <div id="ebbdd3ee-1e5f-4373-b046-bf5c5419bd00"></div>
         </section>
-        <footer style="margin-top: 5rem; background-color: #feb908; text-align: left; font-family: 'Rubik', sans-serif; height: auto; display: flex; align-items: center; justify-content: center;">
+        <footer style="margin-top: 7rem; background-color: #feb908; text-align: left; font-family: 'Rubik', sans-serif; height: auto; display: flex; align-items: center; justify-content: center;">
             <p style="font-weight: 400; color: #ffffff; margin-left: 2rem; margin-right: 2rem; text-align: center; font-size: 12px;"> 
     Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook. <br><br>A venda do Método Cãoportado só pode ser realizada através deste site. Qualquer outro site onde você encontre este programa é uma FALSIFICAÇÃO e vai contra as leis. Evite falsificações e recuse conteúdos ilegais ou pirateados. Não nos responsabilizamos por compras realizadas em outros sites.<br><br> <a href="https://metodocaointeligente.com/privacidade" style="color: #ffffff;">Política de privacidade</a> </p>
         </footer>
