--- a/pagina1/index.html
+++ b/pagina1/index.html
@@ -11,6 +11,15 @@
         <link href="../css/index.css" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik&display=swap">
         <link rel="icon" href="../_pginfo/favicon.png" type="image/png">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-T5PN27S');</script>
+    <!-- End Google Tag Manager -->
+
     </head>     
     <body style="text-align: center;">
         <h1 style="text-align: center; font-family: 'Rubik', sans-serif; font-weight: 400; margin-top: 4rem; color: #00000;"><b>O INCRÍVEL <u style="color: #feb908;">&quot;SEGREDO&quot; DA COMUNICAÇÃO</u> DOS CÃES QUE TRANSFORMA CÃES DESOBEDIENTES EM CÃES SUPER COMPORTADOS EM POUCOS MINUTOS POR DIA</b></h1>
@@ -33,5 +42,11 @@
         </footer>
         <script>if(!document.querySelector('script[src^="https://player.pandavideo.com.br/api.v2.js"]')){let s=document.createElement('script'); s.src='https://player.pandavideo.com.br/api.v2.js'; s.async=true; document.head.appendChild(s);}window.pandascripttag=window.pandascripttag || [];window.pandascripttag.push(function (){const p=new PandaPlayer('panda-3a72950d-1f01-4952-911e-f41dacbcf5da',{onReady(){p.loadButtonInTime({fetchApi: true})}});})</script>
         <div id="ebbdd3ee-1e5f-4373-b046-bf5c5419bd00"></div>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5PN27S"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->  
+
     </body>     
 </html>
