--- a/_pgbackup/index_1683201624.html
+++ b/_pgbackup/index_1683201624.html
@@ -33,7 +33,8 @@
             <div id="dbcf2234-b21c-46b3-902e-870eab5f008c"></div>
         </section>
         <footer style="margin-top: 5rem; background-color: #feb908; text-align: left; font-family: 'Rubik', sans-serif; height: auto; display: flex; align-items: center; justify-content: center;">
-            <p style="font-weight: 400; color: #ffffff; margin-left: 2rem; margin-right: 2rem; text-align: center; font-size: 12px;">Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook. <br><br>O acesso do Método Cãoportado só pode ser realizada através deste site. Qualquer outro site onde você encontre este programa é uma FALSIFICAÇÃO e vai contra as leis. Evite falsificações e recuse conteúdos ilegais ou pirateados. Não nos responsabilizamos por acessos realizados em outros sites.<br><br> <a href="https://metodocaointeligente.com/privacidade" style="color: #ffffff;">Política de privacidade</a></p>
+            <p style="font-weight: 400; color: #ffffff; margin-left: 2rem; margin-right: 2rem; text-align: center; font-size: 12px;"> 
+    Este site não é afiliado ao Facebook ou a qualquer entidade do Facebook. <br><br>A venda do Método Cãoportado só pode ser realizada através deste site. Qualquer outro site onde você encontre este programa é uma FALSIFICAÇÃO e vai contra as leis. Evite falsificações e recuse conteúdos ilegais ou pirateados. Não nos responsabilizamos por compras realizadas em outros sites.<br><br> <a href="https://metodocaointeligente.com/privacidade" style="color: #ffffff;">Política de privacidade</a> </p>
         </footer>
         <!-- Google Tag Manager (noscript) -->
         <noscript>
